fix: jumping when dots active

--- a/src/entities/images/ui/ImageViewer/styles.module.scss
+++ b/src/entities/images/ui/ImageViewer/styles.module.scss
@@ -57,6 +57,8 @@
   align-items: center;
   gap: 0.5rem;
   margin-top: 1rem;
+  width: 100%;
+  min-height: 8px;
 }
 
 .dot {
